add event Stream API in rpc
